--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'ninja.sakib:PultusORM:v1.7'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
