--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     package="com.householdledger">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_app_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
-        </activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +24,16 @@
         <activity android:name=".activity.Tutorial1Activity" />
         <activity android:name=".activity.Tutorial2Activity" />
         <activity android:name=".activity.Tutorial3Activity" />
-        <activity android:name=".activity.Tutorial4Activity"></activity>
+        <activity android:name=".activity.Tutorial4Activity" />
+        <activity
+            android:name=".activity.LockActivity"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTop" />
+        <activity android:name=".activity.WebviewActivity" />
+
+        <service android:name=".LockService" />
+
+        <activity android:name=".SettingActivity"></activity>
     </application>
 
 </manifest>
